--- a/app/src/main/res/layout/lugar.xml
+++ b/app/src/main/res/layout/lugar.xml
@@ -4,16 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:background="@drawable/shape">
+    android:background="@drawable/shape"
+    android:elevation="10dp">
 
     <ImageView
         android:id="@+id/foto"
         android:layout_width="150dp"
         android:layout_height="0dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/nombre"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/backgrounds/scenic[14]" />
@@ -24,9 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="222dp"
         android:text="TV"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/foto"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,7 +29,6 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:layout_marginStart="147dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:background="#558B2F"
@@ -42,7 +36,6 @@
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/foto" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
